content/en/docs/25.0/reference/programs/topo2topo/_index.md
---
title: topo2topo
series: topo2topo
---
## topo2topo

topo2topo copies Vitess topology data from one topo server to another.

### Synopsis

topo2topo copies Vitess topology data from one topo server to another.
It can also be used to compare data between two topologies.

```
topo2topo [flags]
```

### Options

```
      --compare                                                     compares data between topologies
      --config-file string                                          Full path of the config file (with extension) to use. If set, --config-path, --config-type, and --config-name are ignored.
      --config-file-not-found-handling ConfigFileNotFoundHandling   Behavior when a config file is not found. (Options: error, exit, ignore, warn) (default warn)
      --config-name string                                          Name of the config file (without extension) to search for. (default "vtconfig")
      --config-path strings                                         Paths to search for config files in. (default [<WORKDIR>])
      --config-persistence-min-interval duration                    minimum interval between persisting dynamic config changes back to disk (if no change has occurred, nothing is done). (default 1s)
      --config-type string                                          Config file type (omit to infer config type from file extension).
      --do-keyspaces                                                copies the keyspace information
      --do-routing-rules                                            copies the routing rules
      --do-shard-replications                                       copies the shard replication information
      --do-shards                                                   copies the shard information
      --do-tablets                                                  copies the tablet information
      --from-implementation string                                  topology implementation to copy data from
      --from-root string                                            topology server root to copy data from
      --from-server string                                          topology server address to copy data from
      --grpc-enable-tracing                                         Enable gRPC tracing.
      --grpc-max-message-size int                                   Maximum allowed RPC message size. Larger messages will be rejected by gRPC with the error 'exceeding the max size'. (default 16777216)
      --grpc-prometheus                                             Enable gRPC monitoring with Prometheus.
  -h, --help                                                        help for topo2topo
      --keep-logs duration                                          keep logs for this long (using ctime) (zero to keep forever)
      --keep-logs-by-mtime duration                                 keep logs for this long (using mtime) (zero to keep forever)
      --log-err-stacks                                              log stack traces for errors
      --log-format string                                           log output format: json for machine-readable JSON, text for human-readable colored output (default "json")
      --log-level string                                            minimum log level when structured logging is enabled (debug, info, warn, error) (default "info")
      --log-rotate-max-size uint                                    size in bytes at which logs are rotated (glog.MaxSize) (default 1887436800)
      --log-structured                                              enable structured JSON logging (default true)
      --pprof strings                                               enable profiling
      --pprof-http                                                  enable pprof http endpoints
      --purge-logs-interval duration                                how often try to remove old logs (default 1h0m0s)
      --security-policy string                                      the name of a registered security policy to use for controlling access to URLs - empty means allow all for anyone (built-in policies: deny-all, read-only)
      --to-implementation string                                    topology implementation to copy data to
      --to-root string                                              topology server root to copy data to
      --to-server string                                            topology server address to copy data to
  -v, --version                                                     print binary version
```

